--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "Patrick Pulwey",
   "license": "ISC",
   "dependencies": {
+    "@typegoose/typegoose": "^10.2.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
