--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test for back4app containers",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts"
   },
